# rhomboidtiling

./: CMakeLists.txt  README.md
notebooks/: compare_vertices.ipynb
src/: dimensional_traits_2.h  dimensional_traits_3.h  tests_2d.cpp  tests_3d.cpp  vertices_korder_delaunay.cpp
